--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The code architecture allows a simple method to be monitored.",
   "main": "src/index.js",
   "scripts": {
-    "test": "node tests"
+    "test": "node tests",
+    "lint": "eslint src | eslint tests"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,12 @@
     "web"
   ],
   "author": "azmisahin@outlook.com",
-  "license": "MIT",  
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/azmisahin/azmisahin-software-web-component-trace-manager-node/issues"
   },
-  "homepage": "https://github.com/azmisahin/azmisahin-software-web-component-trace-manager-node#readme"
+  "homepage": "https://github.com/azmisahin/azmisahin-software-web-component-trace-manager-node#readme",
+  "devDependencies": {
+    "eslint": "^5.10.0"
+  }
 }
