--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -16,6 +16,13 @@ services:
         BUILD_DIR: ${BUILD_DIR}
         DIST_DIR: ${DIST_DIR}
         # application
+        SWICH_TRACKING_TRACE: "true"
+        SWICH_TRACKING_DEBUG: "true"
+        SWICH_TRACKING_INFO: "true"
+        SWICH_TRACKING_WARN: "true"
+        SWICH_TRACKING_ERROR: "true"
+        SWICH_TRACKING_VERBOSE: "true"
+        SWICH_TRACKING_REPORT: "true"
       labels:
         com.azmisahin.description: ${NAME}
         com.azmisahin.department: "DEVOPS"
@@ -30,7 +37,13 @@ services:
       DIST_DIR: ${DIST_DIR}
 
       # application
-
+      SWICH_TRACKING_TRACE: "true"
+      SWICH_TRACKING_DEBUG: "true"
+      SWICH_TRACKING_INFO: "true"
+      SWICH_TRACKING_WARN: "true"
+      SWICH_TRACKING_ERROR: "true"
+      SWICH_TRACKING_VERBOSE: "true"
+      SWICH_TRACKING_REPORT: "true"
     volumes:
       - ..:/workspace:cached
       
