--- a/.env
+++ b/.env
@@ -9,3 +9,10 @@ BUILD_DIR="build"
 DIST_DIR="dist"
 
 # application
+SWICH_TRACKING_TRACE="false"
+SWICH_TRACKING_DEBUG="false"
+SWICH_TRACKING_INFO="true"
+SWICH_TRACKING_WARN="false"
+SWICH_TRACKING_ERROR="true"
+SWICH_TRACKING_VERBOSE="false"
+SWICH_TRACKING_REPORT="false"
