--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,33 +1,105 @@
-# Node.js
-# Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-latest'
+jobs:
+- job: Build
+  displayName: project [ install ] [ test ] [ publish ] on agent
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '16.x'
-  displayName: 'Install Node.js'
+  pool:
+    vmImage: ubuntu-latest
 
-- script: |
-    npm install
-    npm run test
-  displayName: 'npm install and test'
+  steps:
+  - checkout: self
+    clean: true
+  - task: NodeTool@0
+    displayName: Use Node 16.x
+    inputs:
+      versionSpec: 16.x
+  - task: CmdLine@2
+    displayName: '[installs] a package and any packages that it depends on'
+    inputs:
+      script: npm install
+  - task: CmdLine@2
+    displayName: '[prettier] An opinionated code formatter'
+    inputs:
+      script: npm run prettier
+  - task: CmdLine@2
+    displayName: '[linting] it will analyze for possible errors.'
+    inputs:
+      script: npm run lint
+  - task: CmdLine@2
+    displayName: '[testing] [unit] smaller units of your application, such as classes and methods'
+    inputs:
+      script: npm run test:unit
+  - task: CmdLine@2
+    displayName: testing [ producion] to verify the functionality of the software application.
+    inputs:
+      script: npm run test:features
+  - task: CmdLine@2
+    displayName: '[testing] [ automation ] script testing of the working interface of the project interface.'
+    enabled: False
+    inputs:
+      script: npm run test:automation
+  - task: CmdLine@2
+    displayName: '[coverage] measures how well the source code has been tested.'
+    inputs:
+      script: npm run coverage
+  - task: CmdLine@2
+    displayName: '[documentation] soure code documentation generator'
+    inputs:
+      script: npm run document
+  - task: CmdLine@2
+    displayName: '[build] [production] project compile'
+    enabled: False
+    inputs:
+      script: npm run build
+  - task: CmdLine@2
+    displayName: '[export ] extraction of project executable files.'
+    enabled: False
+    inputs:
+      script: npm run export
+  - task: ArchiveFiles@2
+    displayName: '[archiving] executable files.'
+    inputs:
+      rootFolderOrFile: $(System.DefaultWorkingDirectory)
+      includeRootFolder: false
+  - task: CopyFiles@2
+    displayName: '[preparation] of archived files for publication.'
+    inputs:
+      SourceFolder: $(Build.ArtifactStagingDirectory)
+      Contents: $(Build.BuildId).zip
+      TargetFolder: $(Build.ArtifactStagingDirectory)\ArtifactsToBePublished
+  - task: PublishBuildArtifacts@1
+    displayName: '[publish] [project ]artifact: drop'
+    inputs:
+      PathtoPublish: $(Build.ArtifactStagingDirectory)\ArtifactsToBePublished
+  - task: PublishTestResults@2
+    displayName: '[public] [test] [ENV:production] [ junit ]'
+    inputs:
+      testResultsFiles: $(System.DefaultWorkingDirectory)/reports/test/junit.xml
+  - task: PublishCodeCoverageResults@1
+    displayName: '[publish] [coverage] [cobertura]'
+    inputs:
+      codeCoverageTool: Cobertura
+      summaryFileLocation: $(System.DefaultWorkingDirectory)/reports/test/cobertura-coverage.xml
 
-- task: CopyFiles@2
-  displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
-  inputs:
-    SourceFolder: '$(Build.SourcesDirectory)'
-    Contents: |
-     **/*
-     !.git/**/*
-     !node_modules/**/*
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+- job: SendPackage
+  displayName: pack and ship the project on agent
 
-- task: PublishBuildArtifacts@1
+  pool:
+    vmImage: ubuntu-latest
+  
+  steps:
+  - checkout: self
+    clean: true
+  - task: Npm@1
+    displayName: npm install
+    inputs:
+      verbose: false
+  - task: Npm@1
+    displayName: npm publish
+    inputs:
+      command: publish
+      verbose: true
+      publishEndpoint: 949b604a-6e88-4b18-8c6a-49135f0a310d
+...
